Complete Windows and cuVS GPU backend